lang/src/ast/snapshots/lang__ast__parser__test__fn_call_no_args.snap
---
source: lang/src/ast/parser.rs
expression: "parse_display_expr(\"foo()\")"
---
FnCall(
 Ident(
  foo
 )
)
