lang/src/ast/snapshots/lang__ast__parser__test__fn_call_no_args_precedence.snap
---
source: lang/src/ast/parser.rs
expression: "parse_display_expr(\"foo.bar()\")"
---
FnCall(
 BinaryOp(
  Ident(
   foo
  )
  .
  Ident(
   bar
  )
 )
)
