lang/src/ast/snapshots/lang__ast__parser__test__number_literal.snap
---
source: lang/src/ast/parser.rs
expression: "parse_display_expr(\"4\")"
---
IntegerLiteral(
 4
)
